--- a/galeria.html
+++ b/galeria.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-Entrega2-NataliaBoubee</title>
     <link rel="shortcut icon" href="imgLogos/logo.png" type="image/x-icon">
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="imgLogos/logo.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -25,13 +24,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active"  href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="galeria.html">Galería</a>
+                <a class="nav-link" aria-current="page" href="galeria.html">Galería</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="tienda.html">Tienda</a>
@@ -80,6 +79,7 @@
       <h1>-Noche a Cielo Abierto-</h1>
 
       <h2>GALERÍA</h2>
+      <br><br>
 
       <div class="row">
         <img data-aos="flip-left" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/amanecer.jpg" alt="imágen de un amanecer con luna llena en el horizonte">
@@ -94,9 +94,6 @@
         <img data-aos="zoom-out" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/salida.jpg" alt="salida de la luna en la duna">
         <img data-aos="zoom-out-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/sombra.jpg" alt="sombra de perfil de un jovén con cielo nocturno de fondo">
     </div>
-
-
-
 
 
     </main>
