ruta imagenes galería

--- a/galeria.html
+++ b/galeria.html
@@ -82,17 +82,17 @@
       <br><br>
 
       <div class="row">
-        <img data-aos="flip-left" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/amanecer.jpg" alt="imágen de un amanecer con luna llena en el horizonte">
-        <img data-aos="flip-right" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/eclipse.jpg" alt="imágen de un eclipse de luna">
-        <img data-aos="flip-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/faro.jpg" alt="imágen de una luna llena arriba de un faro">
-        <img data-aos="flip-down" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/nebulosa.jpeg" alt="imágen de la nebulosa de la vía láctea">
-        <img data-aos="zoom-in" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/niebla.jpeg" alt="imágen de niebla entre las rocas en la playa">
-        <img data-aos="zoom-in-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/nubes.jpg" alt="nubes en el atardecer con luna llena">
-        <img data-aos="zoom-in-down" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/palmera.jpg" alt="cielo con los colores del atardecer y la luna sobre una palmera">
-        <img data-aos="zoom-in-left" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/ramas.jpg" alt="cielo nocturno con luna llena con ramas de árbol haciendo sombra">
-        <img data-aos="zoom-in-right" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/reflejo.jpeg" alt="sombra y reflejo de persona parada cerca del agua con cielo nocturno de fondo ">
-        <img data-aos="zoom-out" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/salida.jpg" alt="salida de la luna en la duna">
-        <img data-aos="zoom-out-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="../img/sombra.jpg" alt="sombra de perfil de un jovén con cielo nocturno de fondo">
+        <img data-aos="flip-left" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/amanecer.jpg" alt="imágen de un amanecer con luna llena en el horizonte">
+        <img data-aos="flip-right" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/eclipse.jpg" alt="imágen de un eclipse de luna">
+        <img data-aos="flip-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/faro.jpg" alt="imágen de una luna llena arriba de un faro">
+        <img data-aos="flip-down" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/nebulosa.jpeg" alt="imágen de la nebulosa de la vía láctea">
+        <img data-aos="zoom-in" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/niebla.jpeg" alt="imágen de niebla entre las rocas en la playa">
+        <img data-aos="zoom-in-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/nubes.jpg" alt="nubes en el atardecer con luna llena">
+        <img data-aos="zoom-in-down" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/palmera.jpg" alt="cielo con los colores del atardecer y la luna sobre una palmera">
+        <img data-aos="zoom-in-left" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/ramas.jpg" alt="cielo nocturno con luna llena con ramas de árbol haciendo sombra">
+        <img data-aos="zoom-in-right" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/reflejo.jpeg" alt="sombra y reflejo de persona parada cerca del agua con cielo nocturno de fondo ">
+        <img data-aos="zoom-out" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/salida.jpg" alt="salida de la luna en la duna">
+        <img data-aos="zoom-out-up" class="imgGaleria col-xl-4 col-md-6 col-sm-12" src="img/sombra.jpg" alt="sombra de perfil de un jovén con cielo nocturno de fondo">
     </div>
 
 
